@@ -204,11 +204,11 @@ function get_markers()
     $catsql = $wpdb->prepare("$select $field_default_cat FROM "
         . $wpdb->posts . " as p,"
         . $join . " WHERE p.ID = pd.post_id
-				AND p.post_status = 'publish' " . $search . $gd_posttype, $main_query_array);
+				AND p.post_status = 'publish' " . $search . $gd_posttype , $main_query_array);
 
 
 
-
+    //if(isset($_SESSION['testing2']) && $_SESSION['testing2']){return $_SESSION['testing2'];}
     
 	/**
 	 * Filter the SQL query to retrive markers data
@@ -309,8 +309,10 @@ function get_markers()
 
     $totalcount = count(array_unique($post_ids));
 
-    if (!empty($cat_content_info))
+    if (!empty($cat_content_info)) {
+       // $_SESSION['testing2'] = '[{"totalcount":"' . $totalcount . '",' . substr(implode(',', $cat_content_info), 1) . ']';
         return '[{"totalcount":"' . $totalcount . '",' . substr(implode(',', $cat_content_info), 1) . ']';
+    }
     else
         return '[{"totalcount":"0"}]';
 }
